internal/gatewayapi/testdata/securitypolicy-with-oidc-backendcluster.out.yaml
backendTLSPolicies:
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: BackendTLSPolicy
  metadata:
    name: policy-btls-backend-fqdn
    namespace: envoy-gateway
  spec:
    targetRefs:
    - group: gateway.envoyproxy.io
      kind: Backend
      name: backend-fqdn
    validation:
      caCertificateRefs:
      - group: ""
        kind: ConfigMap
        name: ca-cmap
      hostname: oauth.foo.com
  status:
    ancestors:
    - ancestorRef:
        group: gateway.envoyproxy.io
        kind: SecurityPolicy
        name: policy-for-gateway
        namespace: envoy-gateway
      conditions:
      - lastTransitionTime: null
        message: Resolved all the Object references.
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
backends:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: Backend
  metadata:
    name: backend-fqdn
    namespace: envoy-gateway
  spec:
    endpoints:
    - fqdn:
        hostname: oauth.foo.com
        port: 443
  status:
    conditions:
    - lastTransitionTime: null
      message: The Backend was accepted
      reason: Accepted
      status: "True"
      type: Accepted
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-1
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: http
      port: 80
      protocol: HTTP
  status:
    listeners:
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: httproute-1
    namespace: default
  spec:
    hostnames:
    - www.example.com
    parentRefs:
    - name: gateway-1
      namespace: envoy-gateway
      sectionName: http
    rules:
    - backendRefs:
      - name: service-1
        port: 8080
      matches:
      - path:
          value: /foo
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-1
        namespace: envoy-gateway
        sectionName: http
infraIR:
  envoy-gateway/gateway-1:
    proxy:
      listeners:
      - name: envoy-gateway/gateway-1/http
        ports:
        - containerPort: 10080
          name: http-80
          protocol: HTTP
          servicePort: 80
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-1
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: envoy-gateway/gateway-1
      namespace: envoy-gateway-system
securityPolicies:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: SecurityPolicy
  metadata:
    name: policy-for-gateway
    namespace: envoy-gateway
    uid: b8284d0f-de82-4c65-b204-96a0d3f258a1
  spec:
    oidc:
      clientID: client1.apps.googleusercontent.com
      clientSecret:
        name: client1-secret
      defaultRefreshTokenTTL: 24h
      defaultTokenTTL: 30m
      forwardAccessToken: true
      logoutPath: /bar/logout
      provider:
        authorizationEndpoint: https://oauth.foo.com/oauth2/v2/auth
        backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: backend-fqdn
          port: 443
        backendSettings:
          circuitBreaker:
            maxConnections: 2048
            maxParallelRequests: 4294967295
            maxParallelRetries: 1024
            maxPendingRequests: 1
            maxRequestsPerConnection: 1
          connection:
            bufferLimit: 100M
          dns:
            dnsRefreshRate: 30s
            lookupFamily: IPv4AndIPv6
          healthCheck:
            active:
              healthyThreshold: 1
              http:
                expectedResponse:
                  binary: RXZlcnl0aGluZyBPSw==
                  type: Binary
                expectedStatuses:
                - 200
                - 300
                method: GET
                path: /healthz
              interval: 3s
              timeout: 500ms
              type: HTTP
              unhealthyThreshold: 3
            passive:
              baseEjectionTime: 160s
              consecutive5XxErrors: 5
              consecutiveGatewayErrors: 0
              consecutiveLocalOriginFailures: 5
              interval: 2s
              maxEjectionPercent: 100
              splitExternalLocalOriginErrors: false
          loadBalancer:
            consistentHash:
              type: SourceIP
            type: ConsistentHash
          proxyProtocol:
            version: V2
          retry:
            numRetries: 3
            perRetry:
              backOff:
                baseInterval: 1s
                maxInterval: 5s
            retryOn:
              triggers:
              - 5xx
              - gateway-error
              - reset
          tcpKeepalive:
            idleTime: 20m
            interval: 60s
            probes: 3
          timeout:
            http:
              connectionIdleTimeout: 16s
              maxConnectionDuration: 17s
              requestTimeout: 5s
            tcp:
              connectTimeout: 15s
        issuer: https://oauth.foo.com
        tokenEndpoint: https://oauth.foo.com/token
      redirectURL: https://www.example.com/bar/oauth2/callback
      refreshToken: true
    targetRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-1
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: spec.targetRef is deprecated, use spec.targetRefs instead
        reason: DeprecatedField
        status: "True"
        type: Warning
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
xdsIR:
  envoy-gateway/gateway-1:
    accessLog:
      json:
      - path: /dev/stdout
    globalResources:
      proxyServiceCluster:
        metadata:
          kind: Service
          name: envoy-envoy-gateway-gateway-1-196ae069
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: envoy-gateway/gateway-1
        settings:
        - addressType: IP
          endpoints:
          - host: 7.6.5.4
            port: 8080
            zone: zone1
          metadata:
            kind: Service
            name: envoy-envoy-gateway-gateway-1-196ae069
            namespace: envoy-gateway-system
            sectionName: "8080"
          name: envoy-gateway/gateway-1
          protocol: TCP
    http:
    - address: 0.0.0.0
      externalPort: 80
      hostnames:
      - '*'
      metadata:
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
        sectionName: http
      name: envoy-gateway/gateway-1/http
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
      routes:
      - destination:
          metadata:
            kind: HTTPRoute
            name: httproute-1
            namespace: default
          name: httproute/default/httproute-1/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8080
            metadata:
              kind: Service
              name: service-1
              namespace: default
              sectionName: "8080"
            name: httproute/default/httproute-1/rule/0/backend/0
            protocol: HTTP
            weight: 1
        hostname: www.example.com
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: httproute-1
          namespace: default
        name: httproute/default/httproute-1/rule/0/match/0/www_example_com
        pathMatch:
          distinct: false
          name: ""
          prefix: /foo
        security:
          oidc:
            clientID: client1.apps.googleusercontent.com
            clientSecret: '[redacted]'
            cookieSuffix: b0a1b740
            defaultRefreshTokenTTL: 24h0m0s
            defaultTokenTTL: 30m0s
            forwardAccessToken: true
            hmacSecret: '[redacted]'
            logoutPath: /bar/logout
            name: securitypolicy/envoy-gateway/policy-for-gateway
            provider:
              authorizationEndpoint: https://oauth.foo.com/oauth2/v2/auth
              destination:
                metadata:
                  kind: SecurityPolicy
                  name: policy-for-gateway
                  namespace: envoy-gateway
                name: securitypolicy/envoy-gateway/policy-for-gateway/oidc/0
                settings:
                - addressType: FQDN
                  endpoints:
                  - host: oauth.foo.com
                    port: 443
                  metadata:
                    kind: Backend
                    name: backend-fqdn
                    namespace: envoy-gateway
                  name: securitypolicy/envoy-gateway/policy-for-gateway/oidc/0/backend/0
                  protocol: HTTPS
                  tls:
                    alpnProtocols: null
                    caCertificate:
                      certificate: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKekNDQWcrZ0F3SUJBZ0lVQWw2VUtJdUttenRlODFjbGx6NVBmZE4ySWxJd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0l6RVFNQTRHQTFVRUF3d0hiWGxqYVdWdWRERVBNQTBHQTFVRUNnd0dhM1ZpWldSaU1CNFhEVEl6TVRBdwpNakExTkRFMU4xb1hEVEkwTVRBd01UQTFOREUxTjFvd0l6RVFNQTRHQTFVRUF3d0hiWGxqYVdWdWRERVBNQTBHCkExVUVDZ3dHYTNWaVpXUmlNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXdTVGMKMXlqOEhXNjJueW5rRmJYbzRWWEt2MmpDMFBNN2RQVmt5ODdGd2VaY1RLTG9XUVZQUUUycDJrTERLNk9Fc [...]
                      name: configmap/envoy-gateway/ca-cmap
                    maxVersion: "1.3"
                    minVersion: "1.2"
                    sni: oauth.foo.com
                  weight: 1
              tokenEndpoint: https://oauth.foo.com/token
              traffic:
                backendConnection:
                  bufferLimit: 100000000
                circuitBreaker:
                  maxConnections: 2048
                  maxParallelRequests: 4294967295
                  maxParallelRetries: 1024
                  maxPendingRequests: 1
                  maxRequestsPerConnection: 1
                dns:
                  dnsRefreshRate: 30s
                  lookupFamily: IPv4AndIPv6
                healthCheck:
                  active:
                    healthyThreshold: 1
                    http:
                      expectedResponse:
                        binary: RXZlcnl0aGluZyBPSw==
                      expectedStatuses:
                      - 200
                      - 300
                      host: ""
                      method: GET
                      path: /healthz
                    interval: 3s
                    timeout: 500ms
                    unhealthyThreshold: 3
                  passive:
                    baseEjectionTime: 2m40s
                    consecutive5XxErrors: 5
                    consecutiveGatewayErrors: 0
                    consecutiveLocalOriginFailures: 5
                    interval: 2s
                    maxEjectionPercent: 100
                    splitExternalLocalOriginErrors: false
                loadBalancer:
                  consistentHash:
                    sourceIP: true
                proxyProtocol:
                  version: V2
                retry:
                  numRetries: 3
                  perRetry:
                    backOff:
                      baseInterval: 1s
                      maxInterval: 5s
                  retryOn:
                    triggers:
                    - 5xx
                    - gateway-error
                    - reset
                tcpKeepalive:
                  idleTime: 1200
                  interval: 60
                  probes: 3
                timeout:
                  http:
                    connectionIdleTimeout: 16s
                    maxConnectionDuration: 17s
                    requestTimeout: 5s
                  tcp:
                    connectTimeout: 15s
            redirectPath: /bar/oauth2/callback
            redirectURL: https://www.example.com/bar/oauth2/callback
            refreshToken: true
            scopes:
            - openid
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
